test/bad/classes/type07.px

class A def
    Int x

class B(A) def
    Int y

b = [[B()]]
[[[A]]]*Int t = [b], 6
